Terraform/k8s/users-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api
  labels:
    app: users-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users-api
  template:
    metadata:
      labels:
        app: users-api
    spec:
      containers:
        - name: users-api
          image: YOUR_AZURE_CONTAINER_REGISTRY/users-api:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: users-api
spec:
  type: ClusterIP
  selector:
    app: users-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
