Terraform/k8s/traefik-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - domain.com
        - auth.domain.com
        - todos.domain.com
        - users.domain.com
      secretName: traefik-tls
  rules:
    - host: domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: auth.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-api
                port:
                  number: 8080
    - host: todos.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todos-api
                port:
                  number: 8080
    - host: users.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: users-api
                port:
                  number: 8080
